np-99994-990004-1002-dev-bad-egress-app-to-app.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: 99994-990004-1002-dev
  name: 99994-990004-1002-dev.bad-app-to-app
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              namespace: 99994-990004-1001-dev
      ports:
        - protocol: TCP
          port: 443
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              namespace: 99992-990002-1003-dev
      ports:
        - protocol: TCP
          port: 1521
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
